--- a/react-frontend/src/assets/style.css
+++ b/react-frontend/src/assets/style.css
@@ -115,5 +115,55 @@
     color: #999;
     font-weight: lighter;
   }
+  .row{
+    
+    width: 20em;
+    background-color: #292929;
+    transition: all .3s ease-in-out;
+    height:  100%;
+   
+  }
   
+
+
+  .col{
+    height:  100%;
+    background-color: #292929;
+    transition: transform 600ms cubic-bezier(0.390, 0.575, 0.565, 1.000), opacity 300ms ease;
+    transform: translateZ(34px) scale(.98);
+    flex: 0 0 33.3333%; 
+    position: relative;
+  }
+  
+  
+  
+  .col:hover,
+  .col:focus{
+    transform: translateZ(34px);
+    transition: transform 300ms cubic-bezier(0.390, 0.575, 0.565, 1.000), opacity 300ms ease;
+  }
+
+
+
+  .card__header {
+    position: relative;
+  }
+  
+  .card__header-title {
+    margin: 0 0 .25em;
+    color:white  
+  }
+  
+  .card__header-meta {
+    margin: 0;
+    color: #999;
+  }
+  .container{
+    width:50vw;
+    height: 20vh;
+    display: flex;
+    flex-flow: row;
+    perspective: 1000px;
+    perspective-origin: center;
+  }
   
