--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -30,13 +30,15 @@ body {
    
     }
     .wrapper {
-      height: 100vh;
+      
       width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background-color: #258ea6;
+    
+      background-position:repeat-y;
+     
     }
     
     .f-wrapper {
