modifs index css

--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -30,15 +30,13 @@ body {
    
     }
     .wrapper {
-      
+      height: 100vh;
       width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-    
-      background-position:repeat-y;
-     
+      background-color: #258ea6;
     }
     
     .f-wrapper {
